hphp/hack/test/typecheck/type_constant_xhp_attribute.php.exp
File "type_constant_xhp_attribute.php", line 7, characters 13-16:
Type constants are not allowed on xhp class attributes (Parsing[1002])
