hphp/hack/test/typecheck/type_constant_xhp_attribute.php
<?hh // partial

class A {
  const type T = int;
}
class :x {
  attribute A::T y;
}
